# picoWeatherStation

./: .gitignore  .gitmodules  CMakeLists.txt
demos/: .clang-format  CMakeLists.txt
demos/anemometer/: CMakeLists.txt  main.c
demos/dps310/: CMakeLists.txt  main.c
demos/hdc3022/: CMakeLists.txt  main.c
demos/ltr390/: CMakeLists.txt  main.c
demos/mqtt/: CMakeLists.txt  lwipopts.h  main.c  mbedtls_config.h  mqtt_client.c  mqtt_client_bak.c  mqtt_refactor.c
demos/ntp/: CMakeLists.txt  lwipopts.h  main.c
demos/rain_gauge/: CMakeLists.txt  main.c
demos/wind/: CMakeLists.txt  main.c
demos/wind_vane/: CMakeLists.txt  main.c
src/: .clang-format  CMakeLists.txt  main.c  mqtt.c  ntp.c  queues.c  weather.proto  weather_protocol.c
src/certs/: .gitignore  makecerts.sh  pemToInc.sh
src/include/: lwipopts.h  mbedtls_config.h  mqtt.h  ntp.h  queues.h  utils.h  weather_protocol.h  weather_types.h
